--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  --main-font-family: 'Manrope', sans-serif;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -101,7 +100,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  /* font: inherit; */
   vertical-align: baseline;
 }
 
@@ -120,6 +119,7 @@ section {
 }
 
 body {
+  font-family: var(--main-font-family);
   line-height: 1;
 }
 
