--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1400px;
-  margin: 0 auto;
-  text-align: center;
+  /* max-width: 1440px; */
+  /* margin: 0 auto; */
+  /* text-align: center; */
 }
 
 .logo {
