--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   /* max-width: 1440px; */
-  /* margin: 0 auto; */
+  margin: 0 auto;
   /* text-align: center; */
 }
 
@@ -38,4 +38,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.test {
+  margin-left: 0;
+  margin-top: 0;
 }
