--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,6 @@
   margin-left: 0;
   margin-top: 0;
   position: relative;
-  justify-content: space-between;
+  justify-content: space-around;
   position: relative;
 }
